...
                                            <outlet property="name" destination="XGR-TK-9Xk" id="HMw-7Q-q4w"/>
                                            <outlet property="vendorName" destination="ROm-pd-7o2" id="Ou6-y4-Dug"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="mainTable"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="xm4-ic-GTG"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="sJi-k1-SNk"/>
                                </connections>
                            </tableView>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fNU-B0-YGR" secondAttribute="trailing" id="MKd-Ba-iaa"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fNU-B0-YGR" secondAttribute="bottom" id="irG-VB-e62"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="oIH-p5-FK9">
                        <barButtonItem key="rightBarButtonItem" title="Add" image="plus" catalog="system" id="XBO-Wn-rUC">
                            <connections>
                                <segue destination="4k6-p4-brw" kind="show" identifier="addView" id="bX3-qz-Lcl"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            <objects>
                <viewController id="4k6-p4-brw" customClass="AddViewController" customModule="Testando" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ixA-sz-1OY">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="model" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nax-qP-UXe" userLabel="Model">
                                <rect key="frame" x="16" y="118" width="382" height="34"/>
                                <color key="backgroundColor" red="0.0039215686269999999" green="0.039215686270000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="4k6-p4-brw" id="CpI-Oj-nzo"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="make" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="heT-3U-rgv" userLabel="Make">
                                <rect key="frame" x="16" y="256" width="382" height="34"/>
                                <color key="backgroundColor" red="0.0039215686269999999" green="0.039215686270000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
                        <viewLayoutGuide key="safeArea" id="Ood-2M-KwR"/>
                    </view>
                    <navigationItem key="navigationItem" id="fN0-gB-cL1"/>
                    <connections>
                        <outlet property="make" destination="heT-3U-rgv" id="SKE-wA-NXN"/>
                        <outlet property="model" destination="Nax-qP-UXe" id="NhD-vB-548"/>
                        <outlet property="units" destination="Gx3-QY-JR9" id="P4R-3t-jy4"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="SLb-zh-dMn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="412" y="13"/>
        </scene>
...
